Fixed menu.php scrolling problem on Mobile

--- a/kNOW fit/css/menu.css
+++ b/kNOW fit/css/menu.css
@@ -3,7 +3,9 @@
 
 body{
     margin: 0%;
+    padding: 0%;
     overflow: hidden;
+    height:100%;
 }
 
 main {
@@ -569,6 +571,7 @@ main {
 }
 
 .content_controls_mob{
+    max-width: 20%;
     width: calc(40% - 2vw);
     height: auto; 
 }
@@ -680,7 +683,7 @@ main {
 
 .main_parter_mob{
     width: 100%;
-    height: 100%;
+    height: 87vh;
     display: flex;
     align-items: center;
     flex-direction: column;
